--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
     <div id="promo-timer"></div>
 
     <div class="button-group">
-      <a class="button" href="https://hotmart.link/TU-LINK-AQUI" target="_blank">Lo quiero YA</a>
-      <a class="button" href="https://hotmart.link/PRUEBA-GRATIS-AQUI" target="_blank">Descargar muestra gratuita</a>
+      <a class="button" href="https://pay.hotmart.com/M100904389E" target="_blank">Lo quiero YA</a>
+      <a class="button" href="https://drive.google.com/file/d/1pB1yNYY_w-4MZv2MR9deCUhUq_L51ZJc/view?usp=sharing" target="_blank">Descargar muestra gratuita</a>
     </div>
   </section>
 
@@ -192,7 +192,7 @@
     </div>
 
     <div class="button-group">
-      <a class="button" href="https://hotmart.link/TU-LINK-AQUI" target="_blank">Comprar ahora</a>
+      <a class="button" href="https://pay.hotmart.com/M100904389E" target="_blank">Comprar ahora</a>
     </div>
   </section>
 
@@ -321,7 +321,7 @@
 
 
     <div class="button-group">
-      <a class="button" href="https://hotmart.link/TU-LINK-AQUI" target="_blank">Compra ahora y rompe el hechizo</a>
+      <a class="button" href="https://pay.hotmart.com/M100904389E" target="_blank">Compra ahora y rompe el hechizo</a>
       <a class="button" href="https://hotmart.link/PRUEBA-GRATIS-AQUI" target="_blank">Leer una muestra gratis</a>
     </div>
   </section>
