--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
     <div class="button-group">
       <a class="button" href="https://pay.hotmart.com/M100904389E" target="_blank">Compra ahora y rompe el hechizo</a>
-      <a class="button" href="https://hotmart.link/PRUEBA-GRATIS-AQUI" target="_blank">Leer una muestra gratis</a>
+      <a class="button" href="https://drive.google.com/file/d/1pB1yNYY_w-4MZv2MR9deCUhUq_L51ZJc/view?usp=sharing" target="_blank">Leer una muestra gratis</a>
     </div>
   </section>
 
